installArgoCd/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: argocd-server-nodeport
  managedFields:
  name: argocd-server-nodeport
  namespace: argocd
spec:
  ports:
  - nodePort: 30443
    port: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: argocd-server
  type: NodePort
