installArgoCd/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: argocd-server
  managedFields:
  name: argocd-server
  namespace: argocd
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
